--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,23 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
+
   <body>
-    <%- body %>
-  </body>
+    <header>
+      <h1> The Ironshop </h1>
+
+      <nav>
+        <a href="/"> Homepage </a>
+        <br>
+
+        <a href="/products"> Our Products </a>
+        <br>
+      </nav>
+
+<%- body %>
+
+      <footer>
+        <p> Made with 💕 at Ironhack </p>
+      </footer>
+    </body>
 </html>
