--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,9 @@
 
         <a href="/products"> Our Products </a>
         <br>
+
+        <a href="/products/new"> New Products </a>
+        <br>
       </nav>
 
 <%- body %>
