--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,8 @@
 
   <body>
     <header>
-      <h1> The Ironshop </h1>
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
 
       <nav>
         <a href="/"> Homepage </a>
@@ -19,6 +20,7 @@
 
         <a href="/products/new"> New Products </a>
         <br>
+
       </nav>
 
 <%- body %>
