--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -1,10 +1,13 @@
-<h2> The Products </h2>
-
 <ul>
     <% productsAndStuff.forEach((oneProd) => { %>
       <li>
         <h3> <%= oneProd.name %> </h3>
         <p> $ <%= oneProd.price %> </p>
+        <!--req.query.myId -->
+        <a href="/product/details?myId=<%= oneProd._id %>">
+          View Details
+        </a>
+        <br>
       </li>
   <% }) %>
-  </ul>
+</ul>
