--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,10 +15,10 @@
         <a href="/"> Homepage </a>
         <br>
 
-        <a href="/products"> Our Products </a>
+        <a href="/product"> Our product </a>
         <br>
 
-        <a href="/products/new"> New Products </a>
+        <a href="/product/new"> New product </a>
         <br>
 
       </nav>
