--- a/views/new-product.ejs
+++ b/views/new-product.ejs
@@ -1,4 +1,4 @@
-<form method="post" action="/products">
+<form method="post" action="/product">
   <label for="product-name-input"> Name of product </label>
   <input id="product-name-input" type="text" name="productName">
 
