--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -1,6 +1,6 @@
 <h2> Edit Product </h2>
 
-<form method="post" action="/products/update?myId=<%= productDetails._id %>">
+<form method="post" action="/product/<%= productDetails._id %>/update">
   <label for="product-name-input"> Name of product </label>
   <input id="product-name-input" type="text" name="productName" value="<%= productDetails.name %>">
 
