--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,10 +15,10 @@
         <a href="/"> Homepage </a>
         <br>
 
-        <a href="/product"> Our product </a>
+        <a href="/product"> Our products </a>
         <br>
 
-        <a href="/product/new"> New product </a>
+        <a href="/product/new"> New products </a>
         <br>
 
       </nav>
