--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -7,3 +7,17 @@
 <p> $ <%= productDetails.price %> </p>
 
 <p> <%= productDetails.description %></p>
+
+<hr>
+<section>
+  <h3> Reviews </3>
+
+  <ul>
+  <%  productDetails.reviews.forEach((oneReview) => { %>
+      <li>
+        <h4> <%= oneReview.author %> </h4>
+        <p> <%= oneReview.stars %> out of 5 </p>
+        <p> <%= oneReview.content %> </p>
+      </li>
+  <%  }) %>
+</ul>
