--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -17,7 +17,7 @@
   <br><br>
 
   <label for="product-discription-input"> Discription </label>
-  <textarea id="product-discription-input" name:"productDiscription"
+  <textarea id="product-discription-input" name="productDescription"  
     ><%= productDetails.description %></textarea>
   <br><br>
 
