--- a/views/new-product.ejs
+++ b/views/new-product.ejs
@@ -1,36 +1,30 @@
-<!-- <ul>
-<% for (let fieldName in valadationErrors) { %>
-  <li> <%= valadationErrors[fieldName].message %> </li>
-<% } %>
-</ul> -->
-
 <form method="post" action="/product">
-  <% if (typeof nameValadationError === 'object') { %>
-    <p> <%= nameValadationError.message %> </p>
+  <% if (typeof nameValidationErrors === 'object') { %>
+    <p class="errors"> <%= nameValidationErrors.message %> </p>
   <% } %>
   <label for="product-name-input"> Name of product </label>
   <input id="product-name-input" type="text" name="productName">
 
   <br><br>
 
-  <% if (typeof priceValadationError === 'object') { %>
-    <p> <%= priceValadationError.message %> </p>
+  <% if (typeof priceValidationErrors === 'object') { %>
+    <p class="errors"> <%= priceValidationErrors.message %> </p>
   <% } %>
   <label for="product-price-input"> Price of Product </label>
   <input id="product-price-input" type="number" step:"0.01" name="productPrice"> <!-- include step to allow decimal input -->
 
   <br><br>
 
-  <% if (typeof imageUrlValadationError === 'object') { %>
-    <p> <%= imageUrlValadationError.message %> </p>
+  <% if (typeof imageUrlValidationErrors === 'object') { %>
+    <p class="errors"> <%= imageUrlValidationErrors.message %> </p>
   <% } %>
   <label for="product-image-input"> Image of Product </label>
   <input id="product-image-input" type="url" name="productImageUrl">
 
   <br><br>
 
-  <% if (typeof descriptionValadationError === 'object') { %>
-    <p> <%= descriptionValadationError.message %> </p>
+  <% if (typeof descriptionValidationErrors === 'object') { %>
+    <p class="errors"> <%= descriptionValidationErrors.message %> </p>
   <% } %>
   <label for="product-discription-input"> Discription </label>
   <textarea id="product-discription-input" name="productDescription"></textarea> <!--allows for longer input by user -->
